# agent-sequencer

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_ja.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skills/agent-sequencer/: README.md  README_ja.md  SKILL.md
skills/agent-sequencer/docs/: authoring-programs.md  authoring-programs_ja.md
skills/agent-sequencer/programs/: README.md  README_ja.md  hello.py  review_rounds.py
skills/agent-sequencer/programs/review_rounds/: README.md  README_ja.md
skills/agent-sequencer/programs/review_rounds/agents/: prompt-sensei.md  python-sensei.md  sequencer-sensei.md
skills/agent-sequencer/programs/review_rounds/scripts/: render-review.py
skills/agent-sequencer/programs/review_rounds/skills/: sequencer-review-resolve.md  sequencer-review-respond.md  sequencer-review.md
src/agent_sequencer/: __init__.py  __main__.py  api.py  instance.py  memo.py  persistence.py  registry.py  runtime.py  tools.py
tests/: conftest.py  test_hello.py  test_main.py  test_memo.py  test_persistence.py  test_registry.py  test_review_rounds.py  test_runtime.py  test_tools_memo.py
